--- a/themes/gandalfr/_config.yml
+++ b/themes/gandalfr/_config.yml
@@ -12,7 +12,7 @@ logo: /icon-tech.png
 # Comment
 # e.g disqus: seansun
 disqus:
-livere: krimeshu
+livere: MTAyMC8zNDQzMi8xMDk2OQ==
 
 # Analytics
 # google-analytics:
